[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'esphome-config'
description = ''
version = '0.0.1'
readme = 'README.md'
requires-python = '>=3.8'
license = 'MIT'
keywords = []
authors = [
  { name = 'Matt Black', email = 'github@mafro.net' },
]
classifiers = [
  'Development Status :: 4 - Beta',
  'Programming Language :: Python',
  'Programming Language :: Python :: Implementation :: CPython',
]
dependencies = [
	'esphome',
	'pillow',
]
