[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'esphome-config'
description = ''
version = '0.0.1'
readme = 'README.md'
requires-python = '>=3.8'
license = 'MIT'
keywords = []
classifiers = [
  'Development Status :: 4 - Beta',
  'Programming Language :: Python',
  'Programming Language :: Python :: Implementation :: CPython',
]
dependencies = [
	'esphome',
	'pillow',
]

[tool.hatch.metadata]
allow-direct-references = true

# Fake wheel target config required for Hatch
[tool.hatch.build.targets.wheel.force-include]
"packages" = "packages/*"
